--- a/STM32F103_NEC_DECODER.ioc
+++ b/STM32F103_NEC_DECODER.ioc
@@ -21,20 +21,19 @@ Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB6
-Mcu.Pin8=PB7
-Mcu.Pin9=PB9
+Mcu.Pin5=PA8
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
 Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
+Mcu.UserConstants=PSC,17;ARR,65535
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -43,24 +42,17 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM1_BRK_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA8.Signal=S_TIM1_CH1
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PB9.GPIO_Label=NEC
-PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PB9.Locked=true
-PB9.Signal=GPXTI9
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Speed,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -124,11 +116,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.IPParameters=Prescaler,AutoReloadPreload
-TIM1.Prescaler=719
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
+SH.S_TIM1_CH1.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.IPParameters=Prescaler,AutoReloadPreload,Channel-Input_Capture1_from_TI1,Period,ICPolarity_CH1
+TIM1.Period=ARR
+TIM1.Prescaler=PSC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
